<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".modules.two.fragments.LUFatorationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/configure_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_add_linear_system"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <include
                layout="@layout/util_linear_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/calculate_button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_calculate"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/result_matrix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/str_matrix_result"
                    android:textAppearance="@android:style/TextAppearance.WindowTitle"
                    android:textColor="@color/colorDetail"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <include
                    layout="@layout/util_fatored_matrix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>