<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".modules.three.fragments.ModuleThreeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/icon1"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@android:drawable/list_selector_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/title1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_module3_item1"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDetail"
                app:layout_constraintStart_toEndOf="@+id/icon1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/icon2"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:drawable/list_selector_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon1" />

            <Button
                android:id="@+id/title2"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_module3_item2"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/title1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDetail"
                app:layout_constraintStart_toEndOf="@+id/icon2"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <ImageButton
                android:id="@+id/icon3"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:drawable/list_selector_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon2" />

            <Button
                android:id="@+id/title3"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_module3_item3"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/title2" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDetail"
                app:layout_constraintStart_toEndOf="@+id/icon3"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <ImageButton
                android:id="@+id/icon4"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:drawable/list_selector_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon3" />

            <Button
                android:id="@+id/title4"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/str_module3_item4"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.WindowTitle"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/title3" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDetail"
                app:layout_constraintStart_toEndOf="@+id/icon4"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</FrameLayout>